// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Disclaimer with message 1`] = `
<div
  className="disclaimer"
>
  <span>
    some message
  </span>
</div>
`;

exports[`Disclaimer without message 1`] = `
<div
  className="disclaimer"
>
  <span>
    
  </span>
</div>
`;
